# eos

./: .gitignore  Cargo.toml  README.md
crates/eos-rs/: Cargo.toml  README.md
crates/eos-rs/examples/: platform_minimal.rs
crates/eos-rs/src/: lib.rs
crates/eos-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/eos-sys/examples/: platform_minimal.rs
crates/eos-sys/src/: bindings.rs  lib.rs
