[package]
name = "eos-sys"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Raw FFI bindings to the Epic Online Services (EOS) C SDK."
homepage = "https://dev.epicgames.com/services"
repository = "https://github.com/devphmd/eos"
documentation = "https://docs.rs/eos-sys"
readme = "README.md"
keywords = ["eos", "epic", "online-services", "ffi"]
categories = ["api-bindings", "external-ffi-bindings", "games"]
rust-version = "1.70"

[lib]
name = "eos_sys"
path = "src/lib.rs"

[features]
default = ["prebuilt-bindings"]

# Default for downstream users: no clang/LLVM needed.
prebuilt-bindings = []

# Developer-only: regenerate bindings at build time (requires libclang).
bindgen = ["dep:bindgen"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.71", optional = true }

